<!--
  ~ Copyright (c) 2015-2018, Virgil Security, Inc.
  ~
  ~ Lead Maintainer: Virgil Security Inc. <support@virgilsecurity.com>
  ~
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~     (1) Redistributions of source code must retain the above copyright notice, this
  ~     list of conditions and the following disclaimer.
  ~
  ~     (2) Redistributions in binary form must reproduce the above copyright notice,
  ~     this list of conditions and the following disclaimer in the documentation
  ~     and/or other materials provided with the distribution.
  ~
  ~     (3) Neither the name of virgil nor the names of its
  ~     contributors may be used to endorse or promote products derived from
  ~     this software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<resources>


    <string name="info_settings">Info</string>
    <string name="username">Username</string>
    <string name="help">Help</string>
    <string name="ask_question">Ask question</string>
    <string name="about_settings">About</string>
    <string name="version_history">Version history</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="logout_error">Logout not completed</string>
    <string name="delete_account_question">Delete account?</string>
    <string name="delete_account_beware">It can not be recovered.</string>
    <string name="delete">Delete</string>
    <string name="about_text">\tVirgil is a simple and secure messaging app which uses the frontier encryption technologies so that no-one can access your messages. It is a perfect solution for those who care about their privacy.\n\n\tFeatures:\nText and audio messages - Chat with you friends, colleagues and family in any convenient way.\n\nPhotos - Share your visual experience with others\nSimple - Minimalist user-friendly and intuitive design\nReliable - Requires as little internet data as possible\nEnd-to-end encryption - The messenger hides your chats from any other curious eyes by using the asymmetric cryptography methods\n(Passwordless - Don\'t spend your time trying to remember your password)</string>
    <string name="versions_text">
        Version 1.0.7 :\n
        \t- Shows time in messages
        \t- Fixes crash when receiving malformed message
        Version 1.0.6 :\n
        \t- Pressing push notification will open App
        \t- Fixed contact not added when receiving notification from non-contact
        Version 1.0.5 :\n
        \t- Push notifications added
        Version 1.0.4:\n
        \t- Fixed compatibility with iOS App
        Version 1.0.0 :\n
        \t- App is released
    </string>


</resources>
