<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-2018, Virgil Security, Inc.
  ~
  ~ Lead Maintainer: Virgil Security Inc. <support@virgilsecurity.com>
  ~
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~     (1) Redistributions of source code must retain the above copyright notice, this
  ~     list of conditions and the following disclaimer.
  ~
  ~     (2) Redistributions in binary form must reproduce the above copyright notice,
  ~     this list of conditions and the following disclaimer in the documentation
  ~     and/or other materials provided with the distribution.
  ~
  ~     (3) Neither the name of virgil nor the names of its
  ~     contributors may be used to endorse or promote products derived from
  ~     this software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <include
        android:id="@+id/toolbarSettings"
        layout="@layout/toolbar_custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/llHeader"
        android:layout_width="0dp"
        android:layout_height="98dp"
        android:background="@color/colorPrimaryNight"
        android:paddingEnd="@dimen/default_margin"
        android:paddingStart="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarSettings">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivUserPicSettings"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/dark_red_red_gradient_oval"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/colorAccent" />

        <TextView
            android:id="@+id/tvUsernameSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:textColor="@color/snow"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/ivUserPicSettings"
            app:layout_constraintStart_toEndOf="@id/ivUserPicSettings"
            app:layout_constraintTop_toTopOf="@id/ivUserPicSettings"
            tools:text="User Name" />

        <TextView
            android:id="@+id/tvInitials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@color/snow"
            android:textSize="28sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/ivUserPicSettings"
            app:layout_constraintEnd_toEndOf="@id/ivUserPicSettings"
            app:layout_constraintStart_toStartOf="@id/ivUserPicSettings"
            app:layout_constraintTop_toTopOf="@id/ivUserPicSettings"
            tools:text="UN"
            tools:visibility="visible" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/llPostHeader"
        android:layout_width="0dp"
        android:layout_height="122dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llHeader">

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="34dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/info_settings"
            android:textColor="@color/grayLight"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvUsernameSettingsInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="11dp"
            android:textColor="@color/snow"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvInfo"
            tools:text="User Name" />

        <TextView
            android:id="@+id/tvUsernameHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="3dp"
            android:text="@string/username"
            android:textColor="@color/grayLight"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUsernameSettingsInfo" />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/ivChangeUserPic"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="@dimen/default_margin"
        android:background="@drawable/circle_gray"
        android:contentDescription="@string/change_profile_picture"
        android:scaleType="center"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@id/llHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llHeader" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/llBody"
        android:layout_width="0dp"
        android:layout_height="193dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llPostHeader">

        <TextView
            android:id="@+id/tvHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="19dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/help"
            android:textColor="@color/grayLight"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="17dp"
            android:text="@string/about_settings"
            android:textColor="@color/snow"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHelp" />

        <TextView
            android:id="@+id/tvAskQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="25dp"
            android:text="@string/ask_question"
            android:textColor="@color/snow"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAbout" />

        <TextView
            android:id="@+id/tvVersionHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="25dp"
            android:text="@string/version_history"
            android:textColor="@color/snow"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAskQuestion" />

    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:id="@+id/flLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/virgilGrayTrans"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="invisible"
        tools:visibility="visible">

        <ProgressBar
            android:id="@+id/pbLoading"
            style="@style/AccentProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</android.support.constraint.ConstraintLayout>